# graintrade-info

./: .dockerignore  .env  .env.example  .env.prod  .gitignore  AUTOFILL_COUNTRY_REGION.md  BUGFIX_MAP_ACCESS_FREE_USERS.md  BUGFIX_TARIFF_PLANS_PUBLIC_ACCESS.md  CATEGORY_AUTOCOMPLETE_IMPLEMENTATION.md  CHANGES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile_dev  ENVIRONMENT_FILES_GUIDE.md  Estimate_monthly_costs.md  FREE_GEOCODING_IMPLEMENTATION.md  ITEMFILTER_STYLING_UPDATE.md  ITEMFORM_ACCESS_AND_MAP_RESTRICTIONS.md  ITEMFORM_STYLING_UPDATE.md  ITEMLISTBYCATEGORY_STYLING_UPDATE.md  Jenkinsfile  ML_Notes.md  MONITORING_SETUP.md  NAVBAR_LOGO_IMPLEMENTATION.md  PREFERENCESFORM_COMPLETE_REDESIGN.md  ProjectAudit_BusinessRoadmap.md  QUICK_START_GEOCODING_UA.md  README.md  README_GEOCODING.md  SECURITY_FIX_SUMMARY.md  SECURITY_INCIDENT_CREDENTIAL_ROTATION.md  TECH_STACK_AND_ROADMAP.md  URGENT_ACTION_REQUIRED.md  WELCOME_EMAIL_IMPLEMENTATION.md  anonymous.session  check-syntax.sh  clear-blacklist.sh  commands.txt  compose.yaml  config.py  (+30 more)
app/: .dockerignore  .env  Dockerfile  __init__.py  config.py  database.py  draft.txt  main.py  pyproject.toml  rabbit_mq.py  repository.py  schema.sql  schemas.py  scripts.py  telegram_bot.py  util.sql
app/adapters/: __init__.py  category_repository.py  item_repository.py  user_repository.py
app/application/services/: item_application_service.py  notification_service.py
app/db_utils/: insert_categories.sql
app/domain/: notification.py  recipient.py  subscription.py  tarif.py  user.py
app/domain/entities/: item.py  location.py
app/domain/notifications/: notification.py
app/domain/value_objects/: coordinates.py  terms_delivery.py
app/infrastructure/: __init__.py  database.py  item_repository.py  kafka_handlers.py  schema.sql
app/infrastructure/api/: telegram_bot.py
app/infrastructure/notifications/: email_notification.py  sms_notification.py  telegram_notification.py
app/infrastructure/persistence/: database.py  item_repository.py  schema.sql  subscribtion_repository.py  tarif_repository.py  user_repository.py
app/presentation/: item_routes.py  user_routes.py
app/presentation/routes/: item_routes.py  user_routes.py
app/presentation/templates/: hello.html
app/repositories/: __init__.py  item_repository.py  user_repository.py
app/routers/: category_routers.py  item.py  item_routers.py  map_routers.py  notification_routers.py  schemas.py  subscription_routers.py  user.py  user_routers.py
app/schemas/: schema.sql
app/service_layer/: notification_services.py  rabbit_publisher.py  services.py  unit_of_works.py
app/services/: item_application_service.py  item_service.py  notification_service.py
backend/: .env.prod  .env.prod.example  Dockerfile  README.md  pyproject.toml  sample_env
backend/app/: .env  .env   category_model.py  database.py  items_model.py  logger.py  main.py  rabbit_mq.py  rabbitmq_producer.py  schemas.py  user_model.py
backend/app/adapters/: category_repository.py  item_repository.py  item_user_repository.py  (+4 more)
backend/tests/: butch_categories.py  butch_items.py  conftest.py  graintrade-info-collection.postman_collection.json  httpie_commands.txt  pytest.ini  test_subscription.py
chat-room/: .dockerignore  .env.prod.example  Dockerfile  README.md  pyproject.toml
chat-room/alembic/: env.py
chat-room/app/: crud.py  database.py  main.py  metrics.py  models.py  rabbit_mq.py  redis.py  schemas.py  services.py
docs/: CI_CD.md  (+4 more)
item-service/: .env  Dockerfile  README.md  item-service.yaml  pyproject.toml
item-service/app/: config.py  database.py  kafka_handlers.py  main.py  producer_kafka.py  reposirory.py  schemas.py
notification-service/: Dockerfile  pyproject.toml
notification-service/app/: main.py  schemas.py  services.py
notifications/: .env   .env.prod  .env.prod.example  .envprod  COMMODITY_PRICES_FIX.md  Dockerfile  README.md  main.py  pyproject.toml
notifications/app/: config.py  consumers.py  database.py  main.py  metrics.py  model.py  rabbit_mq.py  run.py  schemas.py  services.py  telegram_bot.py
parsers/: .env.example  AGROTENDER_IMPLEMENTATION.md  IMPROVEMENTS.md  MERGE_SUMMARY.md  QUICKSTART.md  README.md  README_AGROTENDER.md  README_APK_INFORM.md  README_YFINANCE_PARSER.md  REFACTORING_SUMMARY.md  UKRAINIAN_PRICES_IMPLEMENTATION.md  UKRAINIAN_PRICES_QUICKSTART.md  UKRAINIAN_PRICES_SUMMARY.md  agrotender_parser.py  anonymous.session  apk_inform_parser.py  digest.md  pyproject.toml  requirements.txt  run_commodity_parser.sh  sample_rabbitmq_message.json  session.session  setup_ukrainian_prices.sh  spacy_start.py  test_agrotender.py  test_apk_parser.py  test_parser.py  test_ukrainian_prices.sh  ukraine_prices.csv.example  weekly_digest.py  yfinance_draft.py  yfinance_parser.old.py  yfinance_parser.py
parsers/parsers/: api.py  base_parser.py  categories.json  config.py  csv_parser.py  db_loader.py  message_extractor.py  messages.json  openai_extractor.py  parser_1.py  telegram_extractor.py  test_extractor.py  tg_channel_parser.py
parsers/results/: Zernovaya_Birzha_20250911_153533_messages.json  Zernovaya_Birzha_messages.json  Zernovaya_Birzha_messages_20250911_193215.json  Zernovaya_Birzha_messages_20250926_103400.json  agro_trade_messages_20250926_103316.json  generate_sample_xls.py  generate_samples.py  graintorg_messages_20250926_104253.json  items_template.xls  processed_messages.json  processed_messages_openai.json  sample_items.csv  sample_items.xls  sample_items.xlsx  zerno_agro_ua_messages_20250926_104036.json  zerno_sfera_ua_messages_20250926_104157.json  zernou_messages_20250926_104355.json  zernou_processed_messages.json
shared-libs/: Dockerfile  create_tables.py  pyproject.toml  schema.sql
subscription-service/: Dockerfile  pyproject.toml
subscription-service/app/: database.py  main.py  payment_repository.py  schemas.py  subscription_repository.py  tarif_repository.py
subscription-service/tests/: test_subscription.py  test_tarif.py
telegram-bot-service/: .env  Dockerfile  pyproject.toml
telegram-bot-service/app/: main.py  telegram_bot.py
(+202 files in other folders)
