[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
black = "^24.4.2"
pytest = "^8.2.2"
psycopg2-binary = "^2.9.9"
build = "^1.2.1"
python-telegram-bot = "^21.4"
email-validator = "^2.2.0"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
gunicorn = "^22.0.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
