[tool.poetry]
name = "app"
version = "0.1.0"
description = "Graintrade API"
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
PyJWT = "^2.9.0"
pydantic-settings = "^2.6.1"
aio-pika = "^9.4.3"
pika = "^1.3.2"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
