[tool.poetry]
name = "chat-room"
version = "0.1.0"
description = "Chat messeges for graintrade-info project."
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
aiosqlite = "^0.21.0"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"
alembic = "^1.16.2"
aio-pika = "^9.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
