[tool.poetry]
name = "item-service"
version = "0.1.0"
description = "API for CRUD operations with Items"
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
asyncpg = "^0.29.0"
gunicorn = "^22.0.0"
black = "^24.8.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
pydantic-settings = "^2.4.0"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
