[tool.poetry]
name = "item-service"
version = "0.1.0"
description = "API for CRUD operations with Items"
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.113.0"}
uvicorn = "^0.30.5"
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
pydantic-settings = "^2.4.0"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
