[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
python-dotenv = "^1.1.1"
aiosmtplib = "^4.0.1"
jinja2 = "^3.1.6"
pyjwt = "^2.10.1"
aio-pika = "^9.5.5"
asyncpg = "^0.30.0"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
