[tool.poetry]
name = "subscription-service"
version = "0.1.0"
description = "Subscription and tarifs plan"
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standart"], version = "^0.112.2"}
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
pydantic = "^2.8.2"
httpx = "^0.27.0"
aiokafka = "^0.11.0"
asyncpg = "^0.29.0"
black = "^24.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
