[tool.poetry]
name = "telegram-bot-service"
version = "0.1.0"
description = "Telegram Bot for Item API"
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
